# btvChatCorp

./: .env  .env.example  .gitignore  .gitleaks.toml  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/: SPRINT4.md
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.training  docker-compose.rag.yml  requirements.txt
backend/.sqlx/: query-25869ed9ed5ff23f6c0d9ba96e58b922f0c5327899d52faa7f405fe47c49d671.json  query-3bcf150e00eb7f6fe466c95d640651cd22d993fd71498a56381c5c32e4e2bbf8.json  query-3ead745be4eac390b249c540fa5d5202a2bb83c1bc1c388f3985bc0dd2dee9af.json  query-50103568f474a35d3b113dbea879e34c325b04fdd5119013d068c2528c39b067.json  query-5778e6ab260a23590e69ce981e04326e965c8d36384a0621f5c3c837ba435b30.json  query-59cb0f78e5538007929dcd941956d1930e33814c7f1214d206c992c972249b85.json  query-5c15a69d0c37088d80633457617d81f02dceccde4c4403bab4b68ede9a285f58.json  query-5e2756216f0ba6d027cf39e6623b1f86ed393f522de5f63b43352384d24c9e08.json  query-5ef9e01accef8d185d57eb8053c935c48704a3fa4bea9415a70646a76d34e61a.json  query-67c1ec4bf57020068c8123ae5ee66f8326c6af82528284d9f7be3aa083e0d4c3.json  query-7d11a5e238c59ad912eea9de861f81d2c41b719c04439dc1426b89eaefd99261.json  query-8787fadb0b4adc9e55d7c4346f3e470a9f9c2d181f57a5e18a4a991adf63fb91.json  query-98694b5980cbac0e884fc9e70a514347b5d936e5a73298c229efc89e43fbd272.json  query-d1e8c3d2ac24e2fa4029294278127c7c6b6c9edf85366e5183db23b510f945dd.json  query-d4fcd9ad394fdb8f87f841ea0530ea5262735fb2eb5a1ec53d7231ae1abff9a2.json  query-d8450b641c106060195447459c89948a1551b8a709ce9448167a9927e7d121b9.json  query-da3b043de09abec457554a0598f6896e62ac77b4b43ec5d20a6bda5d53877c4f.json  query-dd8c687d5571be5a405e26a15dc7d0482c8d8e5d1e60b81cb1788a846915bfcd.json  query-e8124618449d2b29b16fdafb6ce73840d7281af3d92a6454b1fee38a4dba77cb.json  query-f9ae47960b483219d22963aa671568297e3d06bf944a94e2239a641d401e5112.json  query-fabefef9d6a85ef063036be4c11d61822e0360d0acc134b5c559611c20e4a3f7.json
backend/app/: .gitkeep  config.py  llm_client.py  main.py
backend/app/routers/: chat.py  documents.py  models.py
backend/crates/ai-orchestrator/: Cargo.toml
backend/crates/ai-orchestrator/src/: chat_handler.rs  errors.rs  lib.rs  llm_client.rs  training_repo.rs
backend/crates/api/: Cargo.toml  build.rs
backend/crates/api-public/: Cargo.toml
backend/crates/api-public/src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  models.rs  openapi.rs  rate_limit.rs  state.rs
backend/crates/api-public/src/handlers/: chat.rs  embeddings.rs  health.rs  mod.rs  models.rs
backend/crates/api-public/src/middleware/: api_key_auth.rs  rate_limiter.rs  request_logger.rs  usage_tracker.rs
backend/crates/api-public/src/models/: api_key.rs  mod.rs  webhook.rs
backend/crates/api-public/src/routes/: chat.rs  documents.rs  mod.rs  projects.rs  search.rs  training.rs  usage.rs  webhooks.rs
backend/crates/api/migrations/: 0001_auth.sql  0002_projects.sql  0003_chats.sql  0004_training.sql  0005_refresh_tokens.sql  0006_api_keys_index.sql
backend/crates/api/src/: config.rs  errors.rs  extractors.rs  lib.rs  main.rs  rag.rs  rag_test.rs  rate_limiter.rs  routes.rs  security.rs  state.rs  test_helpers.rs  throttle.rs
backend/crates/api/src/handlers/: partner.rs
backend/crates/api/src/middleware/: admin_guard.rs  api_key_auth.rs  audit_logger.rs  auth.rs  mod.rs  rate_limiter.rs  request_logger.rs  usage_tracker.rs
backend/crates/api/src/models/: admin.rs  chat.rs  document.rs  mod.rs  project.rs  user.rs  workspace.rs
backend/crates/api/src/routes/: admin.rs  attachments.rs  auth.rs  branding.rs  chat.rs  chats.rs  chats_test.rs  documents.rs  documents_test.rs  feedback.rs  mod.rs  models.rs  onboarding.rs  projects.rs  projects_test.rs  rag_test.rs  search.rs  training.rs  training_test.rs  usage.rs  webhooks.rs
backend/crates/api/src/services/: admin_service.rs  audit_service.rs  mod.rs  user_service.rs
backend/crates/branding/: Cargo.toml
backend/crates/branding/src/: css_generator.rs  custom_domain.rs  lib.rs  routes.rs
backend/crates/document-processor/: Cargo.toml  Dockerfile  README.md
backend/crates/document-processor/src/: chunker.rs  cleaner.rs  config.rs  embedder.rs  errors.rs  extractor.rs  indexer.rs  lib.rs  main.rs  models.rs  pipeline.rs  strategy.rs  strategy_selector.rs
backend/crates/document-processor/src/tests/: mod.rs
backend/crates/onboarding/: Cargo.toml
backend/crates/onboarding/src/: checklist.rs  invite.rs  lib.rs  provisioner.rs  templates.rs
backend/crates/rag-searcher/: Cargo.toml
backend/crates/rag-searcher/src/: context_expander.rs  dedup.rs  errors.rs  lib.rs  prompt_builder.rs  reranker.rs  searcher.rs
backend/crates/webhooks/: Cargo.toml
backend/crates/webhooks/src/: delivery_log.rs  dispatcher.rs  events.rs  lib.rs  retry.rs  signer.rs  store.rs
backend/crates/webhooks/tests/: dispatch_e2e.rs
backend/migrations/: 001_core.sql  002_rag_columns.sql  003_branding_onboarding.sql  003_training_interactions.sql  004_api_keys_webhooks.sql  004_branding_onboarding.sql  004_document_chunks.sql  005_document_chunks.sql  006_partners.sql  006_training_interactions_orchestrator.sql  007_webhooks.sql  008_api_keys.sql  009_webhooks_unify.sql  010_api_keys_owner.sql  011_foreign_keys_and_indexes.sql  012_chat_attachments.sql  013_admin_tables.sql  014_branding_expand.sql
backend/services/document_processor/: Dockerfile  requirements.txt
backend/services/document_processor/app/: main.py
backend/services/embedding/: Dockerfile  main.py  preload_models.py  requirements.txt
backend/services/embedding/app/: embedder.py  health.py  main.py  models.py  reranker.py
backend/services/rag_searcher/: Cargo.toml  Dockerfile
backend/services/rag_searcher/src/: main.rs
backend/services/reranker/: Dockerfile  main.py  requirements.txt
backend/training/: config.py  continuous_trainer.py  run_cycle.py  synthetic_qa.py
backend/training/cron/: ai-training
docs/: architecture.md  entrevista-cola.md  migrations-fase2-audit.md  pendencia.v1.md  plano-implementacao-unificado.md  (+2 more)
(+236 files in other folders)
