[workspace]
members = [
    "crates/api",
    "crates/api-public",
    "crates/branding",
    "crates/document-processor",
    "crates/onboarding",
    "crates/rag-searcher",
]
resolver = "2"

# Crates presentes mas NÃO incluídos no workspace por requererem
# refatoração antes de compilar (ver ADR-011):
#   crates/ai-orchestrator  — depende de interfaces não estabilizadas
#   crates/webhooks         — aguardando definição de contratos de evento
# Serão adicionados na Sprint 5.

[workspace.dependencies]
axum               = { version = "0.7" }
tokio              = { version = "1",     features = ["full"] }
serde              = { version = "1.0",   features = ["derive"] }
serde_json         = "1.0"
uuid               = { version = "1",     features = ["v4", "serde"] }
chrono             = { version = "0.4",   features = ["serde"] }
sqlx               = { version = "0.8",   features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }
reqwest            = { version = "0.12",  features = ["json", "stream"] }
futures            = "0.3"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",   features = ["env-filter"] }
bcrypt             = "0.15"
jsonwebtoken       = "9"
tower              = { version = "0.4",   features = ["util"] }
tower-http         = { version = "0.5",   features = ["cors", "trace", "compression-gzip"] }
dotenvy            = "0.15"
sha2               = "0.10"
hex                = "0.4"
hmac               = "0.12"
governor           = "0.6"
utoipa             = { version = "4",     features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui  = { version = "7",     features = ["axum"] }
rand               = "0.8"
