[package]
name = "ai-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1"

# Axum SSE
axum = { version = "0.7", features = ["macros"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Banco
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# Erros
thiserror = "1"
anyhow = "1"

# Tracing
tracing = "0.1"

# Crates internos
rag-searcher = { path = "../rag-searcher" }
