[package]
name = "ai-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { workspace = true }
tokio-stream = "0.1"
futures = { workspace = true }

# Serialização
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
reqwest = { workspace = true }
bytes = "1"

# Axum SSE
axum = { workspace = true, features = ["macros"] }

# UUID
uuid = { workspace = true }

# Banco
sqlx = { workspace = true, features = ["json"] }
chrono = { workspace = true }

# Erros
thiserror = "1"
anyhow = { workspace = true }

# Tracing
tracing = { workspace = true }

# Crates internos
rag-searcher = { path = "../rag-searcher" }
