[package]
name = "api-public"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialização
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI / Swagger
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# HMAC / assinatura de webhooks
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Banco de dados
sqlx = { workspace = true }

# Utilitários
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
mime_guess = "2"

# Crates internos
webhooks = { path = "../webhooks" }
# crate-api referenciado como crate_api (underscore) pelo Rust
crate-api = { path = "../api", package = "api" }
