[package]
name    = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum               = { workspace = true, features = ["multipart"] }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
chrono             = { workspace = true }
sqlx               = { workspace = true }
reqwest            = { workspace = true }
futures            = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
bcrypt             = { workspace = true }
jsonwebtoken       = { workspace = true }
tower-http         = { workspace = true }
dotenvy            = { workspace = true }
sha2               = { workspace = true }
utoipa             = { workspace = true }
utoipa-swagger-ui  = { workspace = true }
branding           = { path = "../branding" }
onboarding         = { path = "../onboarding" }

[dev-dependencies]
tower = { workspace = true }
