[package]
name        = "branding"
version     = "0.1.0"
edition     = "2021"

[dependencies]
axum        = { version = "0.7", features = ["macros"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sqlx        = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.11", features = ["json"] }
tracing     = "0.1"
anyhow      = "1"
