[package]
name    = "branding"
version = "0.1.0"
edition = "2021"

[dependencies]
axum       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
sqlx       = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
tracing    = { workspace = true }
anyhow     = { workspace = true }
