[package]
name = "document-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Banco de dados
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (chamada ao embedding service)
reqwest = { version = "0.12", features = ["json"] }

# Qdrant client
qdrant-client = "1"

# Data/hora
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Expressões regulares (para detectar estrutura jurídica/médica)
regex = "1"

# Parsear PDF (texto selecionável)
pdf-extract = "0.7"

# Parsear DOCX
docx-rs = "0.4"

# Erros ergonômicos
thiserror = "1"
anyhow = "1"

[lib]
name = "document_processor"
path = "src/lib.rs"

[[bin]]
name = "rag-worker"
path = "src/main.rs"
