[package]
name = "document-processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rag-worker"
path = "src/main.rs"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
sqlx       = { workspace = true }
reqwest    = { workspace = true, features = ["json", "multipart"] }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy    = { workspace = true }

# Extração de PDF
pdf-extract = "0.7"

# Extração de DOCX
docx-rs = "0.4"

# Regex (chunking semântico)
regex = "1"

[dev-dependencies]
tempfile = "3"
