[package]
name = "rag-searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { workspace = true }

# Serialização
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# HTTP (embedding service, reranker)
reqwest = { workspace = true }

# Qdrant client
qdrant-client = "1"

# Erros
thiserror = "1"

# Datas
chrono = { workspace = true }

# Tracing
tracing = { workspace = true }

# Banco (para salvar interações)
sqlx = { workspace = true, features = ["json"] }
