[package]
name = "rag_searcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rag_searcher"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
httpx = { package = "reqwest", version = "0.12", features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
